fix: optimize scrollbar style

--- a/packages/components/src/components/td-doc-changelog/style.less
+++ b/packages/components/src/components/td-doc-changelog/style.less
@@ -106,7 +106,6 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
-        min-height: 100%;
 
         // 竖线
         &:not(:has(&-empty))::after {
